@@ -23,6 +23,7 @@
 -revise vector methods for tuple argument.
 -revise sprite to optimize.
 -revise for javascript interoperability.
+-revise vector elementwise object.
 
 0.26    2022-04-18
 -revise textarea object.
